supervisor: fixed line wrapping for the errors panel
--HG--
branch : next


Former-commit-id: 26cb68e0c1dda9749994f2f679c8c6fb710c979b

--- a/RavenQuestionnaire.Web/Web.Supervisor/Content/supervisor.css
+++ b/RavenQuestionnaire.Web/Web.Supervisor/Content/supervisor.css
@@ -70,6 +70,11 @@ h4,
 h3 {
   color: #575655;
 }
+pre {
+    background-color: transparent;
+    border-style: none;
+    box-shadow: none;
+}
 .heading-buttons h1,
 .heading-buttons h2,
 .heading-buttons h3,
